flux/infrastructure/authelia/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authelia
  labels:
    gateway-access: "true"
