flux/infrastructure/authelia/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-filter-redirect
spec:
  parentRefs:
    - name: gateway
      namespace: ingress
      sectionName: http
  hostnames:
    - auth.stehessel.org
  rules:
    - backendRefs:
        - name: authelia
          namespace: authelia
          port: 80
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
            port: 443
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: podinfo
spec:
  parentRefs:
    - name: gateway
      namespace: ingress
      sectionName: https
  hostnames:
    - auth.stehessel.org
  rules:
    - backendRefs:
        - name: authelia
          namespace: authelia
          port: 80
